# chip8_emulator

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Chip8.cpp  Chip8.h  library.cpp  library.h
tests/: CMakeLists.txt  test.cpp
